sub menu wrap error fixed

--- a/client/src/components/nav-bar/navbar.scss
+++ b/client/src/components/nav-bar/navbar.scss
@@ -1,4 +1,5 @@
 .nav-bar{
+  z-index: 5;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -82,10 +83,11 @@
       } 
     }
     .sub-menu-wrap{
+      z-index: 5;
       position: absolute;
       display: inline-block;
       top: 10vh;
-      right: 5px;
+      right: 10px;
       width: 200px;
       max-height: 0px;
       overflow: hidden;
