--- a/client/src/components/right-bar/rightbar.scss
+++ b/client/src/components/right-bar/rightbar.scss
@@ -4,6 +4,7 @@
   top: 8vh;
   height: calc(100vh - 8vh);
   overflow: scroll;
+  z-index: 1;
   &::-webkit-scrollbar{
     display: none;
   }
